$Id: NEWS,v 1.489 2003-10-09 19:40:18 castaglia Exp $

CVS
---------------------------------
- Bug 2167 - getnameinfo() on FreeBSD doesn't support IP address lookups.
- Bug 2176 - getnameinfo() error on Cygwin during startup.
  The sa_family member of the address was not being properly initialized
  in some instances.
- Bug 2179 - ROOT_UID instead of ROOT_GID used in setegid() call.
  This affects Cygwin installations.
- Fixed ASCII file remote exploit discovered by X-Force at ISS:
    http://xforce.iss.net/xforce/alerts/id/154
- Bug 2181 - IPv4 active transfers don't work when using --enable-ipv6.
  IPv4-mapped IPv6 addresses were not being properly compared for active
  data transfers.
- Bug 2200 - Correct segfaults with xlate_ascii_write() on IRIX.
- Bug 2024 - DefaultServer not functioning properly.
  The addition of the Bindings API in 1.2.8rc1 inadvertently caused the
  DefaultServer directive to not be properly honored in some configurations.
- Bug 2183 - Directory configuration lookups broken in 1.2.9rc2.
- Bug 2191 - Segfault in mod_sql_mysql when using 'Backend' SQLAuthType.
  This happens only with MySQL 4.1.  In MySQL 4.1, the way in which MySQL
  handles its passwords changed, and mod_sql_mysql was using the new
  interface incorrectly.
- Bug 2202 - AllowLogSymlinks check is flawed.
  Calling open(2) on a path that is a symlink will follow that symlink;
  the AllowLogSymlink check assumed that open() did not follow the symlink.
  The fix is to use the O_NOFOLLOW flag when opening log file paths.  However,
  this flag does not exist on Solaris machines, and so there still exists
  a race condition on Solaris when checking that a log path is not a symlink.
- Bug 2188 - Wildcard sockets not properly handled on FreeBSD.
  Similar to bugs 2167, the sin_len/sin6_len members of socket structures
  were not being properly set for wildcard sockets.
- Bug 2204 - Reverse DNS lookups not happening properly on connected clients